--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.boxy-text {
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: 'Black Ops One', cursive;
 }
